updated the dashboard code

--- a/dashboard.html
+++ b/dashboard.html
@@ -18,13 +18,13 @@
     --ink-soft:   #6e3f22;
 
     --accent:     #d2a66d;
-    --brand:      #3F2B79;
+    --brand:      #dcad70;
     --brand-ink:  #ffffff;
 
     --btn:        #8F1D1D;
     --btn-ink:    #ffffff;
 
-    --sidebar:      #2a1f3e;
+    --sidebar:      #dcad70;
     --sidebar-ink:  #f6eadd;
 
     --shadow: 0 12px 40px rgba(0,0,0,.12);
